--- a/requirements.txt
+++ b/requirements.txt
@@ -26,8 +26,8 @@ jedi==0.18.2
 Jinja2==3.1.2
 jinja2-time==0.2.0
 joblib==1.2.0
-jupyter-client==8.0.1
-jupyter-core==5.1.5
+jupyter_client==8.0.1
+jupyter_core==5.1.5
 kiwisolver==1.4.4
 MarkupSafe==2.1.2
 matplotlib==3.6.3
