--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ patsy==0.5.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.4.0
-pipeline-0.1.0
+pipeline==0.1.0
 platformdirs==2.6.2
 prompt-toolkit==3.0.36
 psutil==5.9.4
